--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <table cellspacing = 20>
       <tr>
         <td>
-          <img src="C:\Users\jeara\OneDrive\Desktop\Web Development\HTML Personal Site\images\2022-02-07.jpg" alt="">
+          <img src="images/2022-02-07.jpg" alt="">
         </td>
         <td>
           <h1>Jessie Araujo</h1>
@@ -112,8 +112,6 @@
         </td>
       </tr>
     </table>
-
-    <img src="C:\Users\jeara\OneDrive\Desktop\Web Development\HTML Personal Site\images\bart6eyes_1024x1024@2x.webp" alt="">
     <img src="https://legends.pokemon.com/assets/pokemon/pokemon_rowlet.png" alt="rowlet taking flight">
     <a href="contactme.html">Contact Me</a>
   </body>
