--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <tr>
         <td>
           <img src="images/2022-02-07.jpg" alt="">
+          <img src="images\2022-02-07.jpg" alt="">
         </td>
         <td>
           <h1>Jessie Araujo</h1>
