--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <table cellspacing = 20>
       <tr>
         <td>
-          <img src="images/2022-02-07.jpg" alt="">
-          <img src="images\2022-02-07.jpg" alt="">
+                <img src="images\2022-02-07.jpg" alt="">
         </td>
         <td>
           <h1>Jessie Araujo</h1>
@@ -113,7 +112,7 @@
         </td>
       </tr>
     </table>
-    <img src="https://legends.pokemon.com/assets/pokemon/pokemon_rowlet.png" alt="rowlet taking flight">
+    <img src="https://legends.pokemon.com/assets/pokemon/pokemon_rowlet.png" alt="rowlet taking flight"><br>
     <a href="contactme.html">Contact Me</a>
   </body>
 </html>
